--- a/src/app/statistics/points/points.component.html
+++ b/src/app/statistics/points/points.component.html
@@ -87,8 +87,8 @@
         <strong>Rundenpkt.:</strong>
         <ul>
           <li>0 Rundenpunkte für den Verlierer einer Runde</li>
-          <li>1 Rundenpunkt für Finalisten bzw. bei Schock-Aus-Strafe</li>
-          <li>3 Rundenpunkte für Nicht-Finalisten bzw. bei Schock-Aus</li>
+          <li>1 Rundenpunkt für alle anderen Spieler, die im Finale waren bzw. eine Schock-Aus-Strafe erhielten</li>
+          <li>3 Rundenpunkte für alle anderen Spieler, die nicht im Finale waren bzw. einen Schock-Aus würfelten</li>
         </ul>
       </li>
       <li>
