--- a/src/app/statistics/stats-card/stats-card.component.scss
+++ b/src/app/statistics/stats-card/stats-card.component.scss
@@ -1,6 +1,4 @@
-$cards-margin: 10px;
-
-:host ::ng-deep hop-odometer {
+:host ::ng-deep hop-odometer, :host ::ng-deep .odometer-placeholder {
   font-weight: 100;
   font-size: 50px;
   line-height: 50px;
@@ -8,11 +6,10 @@ $cards-margin: 10px;
 
 mat-card {
   display: inline-flex;
-  margin: $cards-margin;
   box-sizing: border-box;
   height: 180px;
+  width: 100%;
   padding: 16px;
-  min-width: 300px;
   overflow: hidden;
   vertical-align: top;
 
