--- a/src/app/statistics/host-table/host-table.component.html
+++ b/src/app/statistics/host-table/host-table.component.html
@@ -8,6 +8,7 @@
   matSort
   matSortActive="count"
   matSortDirection="desc"
+  hopScrollWrapper
 >
   <ng-container matColumnDef="placeType">
     <th mat-header-cell mat-sort-header *matHeaderCellDef>Typ</th>
