--- a/src/app/statistics/points/points.component.scss
+++ b/src/app/statistics/points/points.component.scss
@@ -1,12 +1,12 @@
+.help-button-row {
+  display: flex;
+  justify-content: end;
+  width: 100%;
+}
+
 .control-elements {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 15px 0;
-
-  .view-type-buttons {
-    mat-icon {
-      transform: rotate(90deg);
-    }
-  }
 }
