--- a/src/app/game/event-list/event-list.component.html
+++ b/src/app/game/event-list/event-list.component.html
@@ -1,46 +1,44 @@
-<div class="scroll-wrapper">
-  <table class="event-table">
-    @for (player of players(); track player.id) {
-      <tr>
-        <td>
-          @if (context() === Context.Game) {
+<table hopScrollWrapper class="event-table">
+  @for (player of players(); track player.id) {
+    <tr>
+      <td>
+        @if (context() === Context.Game) {
+          <strong [hopCurrentUser]="player.id" [ngClass]="{ 'inactive': !player.active || player.isDeleted }">{{player.name}}</strong>
+        } @else {
+          <mat-checkbox [checked]="selectedPlayers().includes(player.id)" (change)="handleCheckboxChange($event, player.id)" [disabled]="disabled() || !(hasUpdatePermission$ | async)">
             <strong [hopCurrentUser]="player.id" [ngClass]="{ 'inactive': !player.active || player.isDeleted }">{{player.name}}</strong>
-          } @else {
-            <mat-checkbox [checked]="selectedPlayers().includes(player.id)" (change)="handleCheckboxChange($event, player.id)" [disabled]="disabled() || !(hasUpdatePermission$ | async)">
-              <strong [hopCurrentUser]="player.id" [ngClass]="{ 'inactive': !player.active || player.isDeleted }">{{player.name}}</strong>
-            </mat-checkbox>
-          }
-        </td>
-        <td [ngClass]="{ empty: this.disabled() }">
-          @if (!this.disabled()) {
-            <button mat-icon-button *hopHasPermission="Permission.CREATE_EVENTS" class="hop-icon-button primary" (click)="openAddEventDialog(player)">
-              <mat-icon>add</mat-icon>
-            </button>
-          }
-        </td>
-        <td>
-          @for (event of events() | eventsByPlayerId:player.id; track event.id) {
-            <div class="event-row">
-              <div class="left-col">
-                @if (!disabled()) {
-                  <button mat-icon-button *hopHasPermission="Permission.DELETE_EVENTS" class="hop-icon-button danger" (click)="removeEvent(event.id)">
-                    <mat-icon>delete</mat-icon>
-                  </button>
-                }
-                <span>{{ event.eventType.description }}</span>
-                @if (event.comment) {
-                  <mat-icon [matTooltip]="event.comment" style="margin-left: 10px;">comment</mat-icon>
-                }
-              </div>
-              <div class="right-col">
-                @if (event.calculatedPenalty.sum) {
-                  <hop-penalty-with-unit [unit]="event.calculatedPenalty.unit" [penalty]="event.calculatedPenalty.sum"></hop-penalty-with-unit>
-                }
-              </div>
+          </mat-checkbox>
+        }
+      </td>
+      <td [ngClass]="{ empty: this.disabled() }">
+        @if (!this.disabled()) {
+          <button mat-icon-button *hopHasPermission="Permission.CREATE_EVENTS" class="hop-icon-button primary" (click)="openAddEventDialog(player)">
+            <mat-icon>add</mat-icon>
+          </button>
+        }
+      </td>
+      <td>
+        @for (event of events() | eventsByPlayerId:player.id; track event.id) {
+          <div class="event-row">
+            <div class="left-col">
+              @if (!disabled()) {
+                <button mat-icon-button *hopHasPermission="Permission.DELETE_EVENTS" class="hop-icon-button danger" (click)="removeEvent(event.id)">
+                  <mat-icon>delete</mat-icon>
+                </button>
+              }
+              <span>{{ event.eventType.description }}</span>
+              @if (event.comment) {
+                <mat-icon [matTooltip]="event.comment" style="margin-left: 10px;">comment</mat-icon>
+              }
             </div>
-          }
-        </td>
-      </tr>
-    }
-  </table>
-</div>
+            <div class="right-col">
+              @if (event.calculatedPenalty.sum) {
+                <hop-penalty-with-unit [unit]="event.calculatedPenalty.unit" [penalty]="event.calculatedPenalty.sum"></hop-penalty-with-unit>
+              }
+            </div>
+          </div>
+        }
+      </td>
+    </tr>
+  }
+</table>
