--- a/src/app/statistics/points-table/points-table.component.html
+++ b/src/app/statistics/points-table/points-table.component.html
@@ -8,6 +8,7 @@
   matSort
   matSortActive="rank"
   matSortDirection="asc"
+  hopScrollWrapper
 >
   <ng-container matColumnDef="rank">
     <th mat-header-cell mat-sort-header *matHeaderCellDef>Platz</th>
