--- a/src/app/statistics/penalty-table/penalty-table.component.html
+++ b/src/app/statistics/penalty-table/penalty-table.component.html
@@ -40,7 +40,7 @@
   </ng-container>
 
   <ng-container matColumnDef="quote">
-    <th mat-header-cell mat-sort-header *matHeaderCellDef>Quote</th>
+    <th mat-header-cell mat-sort-header *matHeaderCellDef>Anteil</th>
     <td mat-cell *matCellDef="let element">{{ element.quote | percent: '1.1' }}</td>
   </ng-container>
 
